# gcal-fullstack-demo

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: EventCard.tsx  LoginForm.tsx
frontend/src/utils/: fetcher.ts
mobile/: .env.example  .gitignore  README.md  app.json  package.json
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
mobile/components/: EventCard.tsx  LoginForm.tsx  Toast.tsx
mobile/constants/: configs.ts
mobile/utils/: fetcher.ts
